--- a/package.json
+++ b/package.json
@@ -4,25 +4,9 @@
   "scripts": {
     "build": "node build.js",
     "lint": "eslint . --ext .ts",
-    "start": "node -r module-alias/register ./dist --env=production",
-    "start:dev": "nodemon",
-    "test": "nodemon --config ./spec/nodemon.json"
-  },
-  "nodemonConfig": {
-    "watch": [
-      "src"
-    ],
-    "ext": "ts, html",
-    "ignore": [
-      "src/public"
-    ],
-    "exec": "ts-node -r tsconfig-paths/register ./src"
-  },
-  "_moduleAliases": {
-    "@daos": "dist/daos",
-    "@entities": "dist/entities",
-    "@shared": "dist/shared",
-    "@server": "dist/Server"
+    "start": "node ./dist/index.js --env=production",
+    "start:dev": "ts-node -r tsconfig-paths/register ./src",
+    "test": "ts-node -r tsconfig-paths/register ./spec"
   },
   "dependencies": {
     "@types/redis": "^2.8.22",
@@ -33,7 +17,6 @@
     "helmet": "^3.23.0",
     "http-status-codes": "^1.4.0",
     "jest": "^26.1.0",
-    "module-alias": "^2.2.2",
     "morgan": "^1.10.0",
     "pg": "^8.2.1",
     "reflect-metadata": "^0.1.13",
@@ -51,7 +34,6 @@
     "@types/jasmine": "^3.5.10",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.0.13",
-    "@types/sinon": "^9.0.4",
     "@types/supertest": "^2.0.9",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
@@ -59,7 +41,6 @@
     "find": "^0.3.0",
     "fs-extra": "^9.0.1",
     "jasmine": "^3.5.0",
-    "nodemon": "^2.0.4",
     "sinon": "^9.0.2",
     "supertest": "^4.0.2",
     "ts-node": "^8.10.2",
